--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.8",
+    "axios": "^1.7.9",
     "d3-format": "^3.1.0",
     "d3-time-format": "^4.1.0",
     "dotenv": "^16.4.7",
+    "events": "^3.3.0",
+    "https": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-financial-charts": "^2.0.1"
+    "react-financial-charts": "^2.0.1",
+    "rss-parser": "^3.13.0",
+    "url": "^0.11.4",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -24,6 +29,7 @@
     "@types/d3-time-format": "^4.0.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/xml2js": "^0.4.14",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
@@ -34,6 +40,7 @@
     "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "vite-plugin-mkcert": "^1.17.6"
   }
 }
