--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.7.9",
     "d3-format": "^3.1.0",
     "d3-time-format": "^4.1.0",
