--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
     "d3-format": "^3.1.0",
     "d3-time-format": "^4.1.0",
     "dotenv": "^16.4.7",
@@ -30,6 +31,7 @@
     "@eslint/js": "^9.15.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
+    "@types/cheerio": "^0.22.35",
     "@types/d3-format": "^3.0.4",
     "@types/d3-time-format": "^4.0.3",
     "@types/jest": "^29.5.14",
