--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-financial-charts": "^2.0.1",
+    "react-sparklines": "^1.7.0",
     "rss-parser": "^3.13.0",
     "testing-library": "^0.0.2",
     "url": "^0.11.4",
@@ -37,6 +38,7 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-sparklines": "^1.7.5",
     "@types/xml2js": "^0.4.14",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
